# Toolkit-Samples

./: CMakeLists.txt  README.html  README.md  SECURITY.md  compiler_options.cmake  find_toolkit.cmake
VisualStudio/: Samples.sln
VisualStudio/aead_chacha20_poly1305/decrypt/: aead_chacha20_poly1305_decrypt.vcxproj
VisualStudio/aead_chacha20_poly1305/encrypt/: aead_chacha20_poly1305_encrypt.vcxproj
VisualStudio/chacha20/decrypt/: chacha20_decrypt.vcxproj
VisualStudio/chacha20/encrypt/: chacha20_encrypt.vcxproj
VisualStudio/common/: isara_samples.vcxproj
VisualStudio/frododh/: frododh.vcxproj
VisualStudio/hash/: hash.vcxproj
VisualStudio/integration/: rng-cng.vcxproj
VisualStudio/newhopedh/: newhopedh.vcxproj
VisualStudio/rng/: rng.vcxproj
VisualStudio/samwise/: samwise.vcxproj
VisualStudio/sidh/: sidh.vcxproj
VisualStudio/version/: version.vcxproj
aead_chacha20_poly1305/: README.html  README.md
aead_chacha20_poly1305/decrypt/: CMakeLists.txt  main.c
aead_chacha20_poly1305/encrypt/: CMakeLists.txt  main.c
aead_chacha20_poly1305_decrypt/: CMakeLists.txt  README.md  main.c
aead_chacha20_poly1305_encrypt/: CMakeLists.txt  README.html  README.md  main.c
chacha20/: README.html  README.md
chacha20/decrypt/: CMakeLists.txt  main.c
chacha20/encrypt/: CMakeLists.txt  main.c
chacha20_decrypt/: CMakeLists.txt  README.html  README.md  main.c
chacha20_encrypt/: CMakeLists.txt  README.md  main.c
classicmceliece/: README.html  README.md
classicmceliece/decapsulate/: CMakeLists.txt  main.c
classicmceliece/encapsulate/: CMakeLists.txt  main.c
classicmceliece/generate_keys/: CMakeLists.txt  main.c
common/: CMakeLists.txt  README.html  README.md  common_io.c  isara_samples.h  paramcmp.c  secure_memzero.c
dilithium/: README.html  README.md
dilithium/generate_keys/: CMakeLists.txt  main.c
dilithium/sign/: CMakeLists.txt  main.c
dilithium/verify/: CMakeLists.txt  main.c
ecdh/: CMakeLists.txt  README.md  alice.c  bob.c  comms.c  internal.h  main.c
frodo/: CMakeLists.txt  README.md  alice.c  bob.c  comms.c  internal.h  main.c
frododh/: CMakeLists.txt  README.md  alice.c  bob.c  comms.c  internal.h  main.c
frodokem/: README.md
frodokem/decapsulate/: CMakeLists.txt  main.c
frodokem/encapsulate/: CMakeLists.txt  main.c
frodokem/generate_keys/: CMakeLists.txt  main.c
hash/: CMakeLists.txt  README.html  README.md  main.c
hmac/: CMakeLists.txt  README.html  README.md  main.c
hss/: README.html  README.md
hss/detach/: CMakeLists.txt  main.c
hss/generate_keys/: CMakeLists.txt  main.c
hss/sign/: CMakeLists.txt  main.c
hss/verify/: CMakeLists.txt  main.c
hss/verify_from_sig/: CMakeLists.txt  main.c
integration/hash-openssl/: CMakeLists.txt  README.md  main.c
integration/rng-cng/: CMakeLists.txt  README.md  main.c
integration/rng-urandom/: CMakeLists.txt  README.md  main.c
kdf/concatenation/: CMakeLists.txt  README.md  main.c
kdf/pbkdf2/: CMakeLists.txt  README.md  main.c
kdf/rfc5869/: CMakeLists.txt  README.md  main.c
kdf_concatenation/: CMakeLists.txt  README.html  README.md  main.c
kdf_pbkdf2/: CMakeLists.txt  README.html  README.md  main.c
kdf_rfc5869/: CMakeLists.txt  README.html  README.md  main.c
kyber/: README.html  README.md
kyber/decapsulate/: CMakeLists.txt  main.c
kyber/encapsulate/: CMakeLists.txt  main.c
kyber/generate_keys/: CMakeLists.txt  main.c
lms/: README.md
lms/generate_keys/: CMakeLists.txt  main.c
lms/sign/: CMakeLists.txt  main.c
lms/verify/: CMakeLists.txt  main.c
lms_generate_keys/: CMakeLists.txt  README.html  README.md  main.c
lms_sign/: CMakeLists.txt  README.html  README.md  main.c
lms_verify/: CMakeLists.txt  README.html  README.md  main.c
luke/: CMakeLists.txt  README.html  README.md  alice.c  bob.c  comms.c  internal.h  main.c
mac/hmac/: CMakeLists.txt  README.md  main.c
mac/poly1305/: CMakeLists.txt  README.md  main.c
mceliece/: README.md
mceliece/decapsulate/: CMakeLists.txt  main.c
mceliece/encapsulate/: CMakeLists.txt  main.c
mceliece/generate_keys/: CMakeLists.txt  main.c
mceliece_decrypt/: CMakeLists.txt  README.md  main.c
mceliece_encrypt/: CMakeLists.txt  README.md  main.c
mceliece_generate_keys/: CMakeLists.txt  README.html  README.md  main.c
newhope/: CMakeLists.txt  README.html  README.md  alice.c  bob.c  comms.c  internal.h  main.c
newhopedh/: CMakeLists.txt  README.md  alice.c  bob.c  comms.c  internal.h  main.c
ntruprime/: README.md
ntruprime/decapsulate/: CMakeLists.txt  main.c
ntruprime/encapsulate/: CMakeLists.txt  main.c
ntruprime/generate_keys/: CMakeLists.txt  main.c
poly1305/: CMakeLists.txt  README.html  README.md  main.c
rainbow/: README.md
rainbow/generate_keys/: CMakeLists.txt  main.c
rainbow/sign/: CMakeLists.txt  main.c
rainbow/verify/: CMakeLists.txt  main.c
rng/: CMakeLists.txt  README.html  README.md  main.c
saber/: README.md
saber/decapsulate/: CMakeLists.txt  main.c
saber/encapsulate/: CMakeLists.txt  main.c
saber/generate_keys/: CMakeLists.txt  main.c
samwise/: CMakeLists.txt  README.md  alice.c  bob.c  comms.c  internal.h  main.c
sidh/: CMakeLists.txt  README.md  alice.c  bob.c  comms.c  internal.h  main.c
sike/: README.md
sike/decapsulate/: CMakeLists.txt  main.c
sike/encapsulate/: CMakeLists.txt  main.c
sike/generate_keys/: CMakeLists.txt  main.c
sphincs/: README.html  README.md
sphincs/generate_keys/: CMakeLists.txt  main.c
sphincs/sign/: CMakeLists.txt  main.c
sphincs/verify/: CMakeLists.txt  main.c
version/: CMakeLists.txt  README.html  README.md  main.c
xmss/: README.html  README.md
xmss/detach/: CMakeLists.txt  main.c
xmss/generate_keys/: CMakeLists.txt  main.c
xmss/sign/: CMakeLists.txt  main.c
xmss/verify/: CMakeLists.txt  main.c
xmss/verify_from_public/: CMakeLists.txt  main.c
xmssmt/: README.md
xmssmt/detach/: CMakeLists.txt  main.c
xmssmt/generate_keys/: CMakeLists.txt  main.c
xmssmt/sign/: CMakeLists.txt  main.c
xmssmt/verify/: CMakeLists.txt  main.c
xmssmt/verify_from_public/: CMakeLists.txt  main.c
(+50 files in other folders)
